add ca placeholder

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           The first true critter coin where you don’t just ape—you Critter!
         </div>
         <div class="why-tara-bubble secondary">
-          Powered by the adorable energy of Calico Critter PNGs. With a 1% burn, $Calico is ready to bring joy to the blockchain!
+          Powered by the adorable energy of Calico Critter PNGs. $Calico is ready to bring joy to the blockchain!
         </div>
         <div class="why-details">
           <div class="detail-card">
@@ -253,6 +253,9 @@
         </div>
         <p>Join the Calico Critters adventure and grab your $Calico tokens to become part of our magical village!</p>
         <a href="http://fomo.biz" target="_blank" class="btn"><i class="fas fa-paw"></i> Get $Calico Now!</a>
+        <div class="ca-container">
+          <p class="ca-text">CA: Soon</p>
+        </div>
       </div>
       <div class="panel-caption">
         <h2>Grab $Calico! <i class="fas fa-hand-holding-heart"></i></h2>
