--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calico Critters - $Calico Memecoin Adventure</title>
+  <title>Calico Critaras - $Calico Memecoin Adventure</title>
   <link href="https://fonts.googleapis.com/css2?family=Anime+Ace:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
@@ -98,8 +98,8 @@
           The Story of Calico Village!
         </div>
         <div class="story-content">
-          <p>In the magical land of Stara, nestled between sparkling rivers and fluffy clouds, lies Calico Village—a place where critters live in harmony and joy!</p>
-          <p>I’m Tara, the leader of the Calico Critters, and I’ve got a big dream: to make our village the most fun place in the whole universe!</p>
+          <p>In the magical land of Stara, nestled between sparkling rivers and fluffy clouds, lies Calico Village—a place where Critaras live in harmony and joy!</p>
+          <p>I’m Tara, the leader of the Calico Critaras, and I’ve got a big dream: to make our village the most fun place in the whole universe!</p>
           <p>One sunny day, while picking strawberries with my friends Fluffy and Snuggle, we found a shiny, magical coin buried in the meadow.</p>
           <p>It glowed with a soft pink light and whispered, “I’m the $Calico coin! Use me to spread happiness across Stara!”</p>
           <p>We were so excited! With this coin, we could host the biggest Critter Festival ever—full of games, treats, and new friends!</p>
@@ -251,7 +251,7 @@
         <div class="grab-tara-bubble">
           Grab Your $Calico Today!
         </div>
-        <p>Join the Calico Critters adventure and grab your $Calico tokens to become part of our magical village!</p>
+        <p>Join the Calico Critaras adventure and grab your $Calico tokens to become part of our magical village!</p>
         <a href="http://fomo.biz" target="_blank" class="btn"><i class="fas fa-paw"></i> Get $Calico Now!</a>
         <div class="ca-container">
           <p class="ca-text">CA: Soon</p>
@@ -266,7 +266,7 @@
     </section>
 
     <footer>
-      <p>© 2025 Calico Critters. All rights reserved! Made with <i class="fas fa-heart"></i> in Calico Village.</p>
+      <p>© 2025 Calico Critaras. All rights reserved! Made with <i class="fas fa-heart"></i> in Calico Village.</p>
     </footer>
   </div>
 
